<resources>
  <string name="app_name">SSRRAY</string>
  <string name="quick_toggle">Toggle</string>
  <string name="misc_cat">Misc</string>
  <string name="profile">Profile</string>
  <string name="profile_summary">Switch to another profile or add new profiles</string>
  <string name="nat">NAT mode (deprecated)</string>
  <string name="nat_summary">Use NAT mode instead of VPN mode. Requires ROOT permission.</string>
  <string name="stat">Network Traffic</string>
  <string name="stat_summary">Sent: \t\t\t\t\t%3$s\t↑\t%1$s/s\nReceived: \t%4$s\t↓\t%2$s/s</string>
  <string name="stat_profiles" translatable="false">\n%1$s %2$s↓ %3$sms %4$s</string>
  <string name="traffic_summary">%1$s/s↑\t%2$s/s↓</string>
  <plurals name="bytes" translatable="false">
    <item quantity="one">B</item>
    <item quantity="other">B</item>
  </plurals>
  <string name="connection_test_pending">Check Connectivity</string>
  <string name="connection_test_testing">Testing…</string>
  <string name="connection_test_available">Success: %dms latency</string>
  <string name="connection_test_unavailable">Failed to Connect to Internet</string>
  <string name="connection_test_error">Fail to detect internet connection: %s</string>
  <string name="connection_test_fail">Internet Unavailable</string>
  <string name="connection_test_error_status_code">Error code: #%d</string>
  <string name="speed_test_available">Max Speed: %s/s</string>
  <string name="speed_max_avg">Max: %1$s/s, Avg: %2$s/s</string>
  <string name="proxy_cat">Server Settings</string>
  <string name="proxy_v2ray" translatable="false">V2Ray Settings</string>
  <string name="proxy_trojan" translatable="false">Trojan Settings</string>
  <string name="profile_name">Profile Name</string>
  <string name="proxy">Server</string>
  <string name="proxy_summary">Hostname or IP of the remote server</string>
  <string name="remote_port">Remote Port</string>
  <string name="remote_port_summary">%d (port number of the remote server)</string>
  <string name="port">Local Port</string>
  <string name="port_summary">%d (port number of the local server)</string>
  <string name="sitekey">Password</string>
  <string name="sitekey_summary">Password of the remote server</string>
  <string name="protocol">Protocol</string>
  <string name="protocol_summary">Protocol you set in your server</string>
  <string name="protocol_param">Protocol Param</string>
  <string name="protocol_param_summary">Protocol param you input in your server</string>
  <string name="obfs">Obfs</string>
  <string name="obfs_summary">Obfs you selected in your server</string>
  <string name="obfs_param">Obfs Param</string>
  <string name="obfs_param_summary">Obfs param you put in your server</string>
  <string name="enc_method">Encrypt Method</string>
  <string name="feature_cat">Feature Settings</string>
  <string name="ipv6">IPv6 Route</string>
  <string name="ipv6_summary">Redirect IPv6 traffic to remote</string>
  <string name="onetime_auth">One-time Authentication</string>
  <string name="onetime_auth_summary">Enable one-time authentication</string>
  <string name="http_proxy">HTTP Proxy</string>
  <string name="http_proxy_summary">Local HTTP Proxy</string>
  <string name="dns_proxy">DNS Proxy</string>
  <string name="dns_proxy_summary">Redirect DNS queries to remote</string>
  <string name="auto_set_gfwlist">CHN Route</string>
  <string name="auto_set_gfwlist_summary">Bypass all sites located in China
  </string>
  <string name="route_list">Route</string>
  <string-array name="route_entry">
    <item>All</item>
    <item>Bypass LAN</item>
    <item>Bypass China</item>
    <item>Bypass LAN &amp; China</item>
    <item>GFW List</item>
    <item>China List</item>
    <item>ACL4SSR BanAD</item>
    <item>ACL4SSR GFWList BanAD</item>
    <item>ACL4SSR OnlyBanAD</item>
    <item>ACL4SSR FullGFWList</item>
    <item>ACL4SSR BackCN BanAD</item>
    <item>ACL4SSR NoBanAD</item>
    <item>Customize ACL File</item>
  </string-array>
  <string-array name="route_entry_v2ray">
    <item>All</item>
    <item>Bypass LAN</item>
    <item>Bypass China</item>
    <item>Bypass LAN &amp; China</item>
    <item>GFW List</item>
    <item>China List</item>
  </string-array>
  <string-array name="profile_display_info_entry">
    <item>Server</item>
    <item>Port</item>
    <item>Traffic</item>
  </string-array>
  <string-array name="batch_delete_choices">
    <item>All</item>
    <item>= 0ms</item>
    <item>> 200ms</item>
    <item>> 300ms</item>
    <item>> 500ms</item>
    <item>> 1000ms</item>
  </string-array>
  <string name="custom_profile_display_info">Custom Profile Display Info</string>
  <string name="custom_profile_display_info_summary">Custom Display Server, Port and Traffic of Profile</string>
  <string name="select_profile_display_info">Select Profile Display Info</string>
  <string name="acl_file">ACL File URL</string>
  <string name="aclupdate">ACL Update</string>
  <string name="aclupdate_summary">Update Your ACL file</string>
  <string name="aclupdate_url_notset">Sorry, an ACL file URL has to be set before you can update it. Please click on \'Customize ACL File\' in \'Route Setting\' and try again.</string>
  <string name="aclupdate_downloading">Updating ACL file...</string>
  <string name="aclupdate_successfully">Successfully updated ACL file.</string>
  <string name="aclupdate_failed">Failed to update ACL file!</string>
  <string name="proxied_apps">Per-App Proxy</string>
  <string name="proxied_apps_summary">Set proxy for selected apps, requires NAT mode under Android 4.x</string>
  <string name="on">On</string>
  <string name="per_app_proxy">Per-App Proxy</string>
  <string name="bypass_apps">Bypass Mode</string>
  <string name="bypass_apps_summary">Enable this option to bypass selected apps</string>
  <string name="auto_connect">Auto Connect</string>
  <string name="auto_connect_summary">Enable ShadowsocksR on startup</string>
  <string name="tcp_fastopen_summary">Toggling requires ROOT permission</string>
  <string name="tcp_fastopen_summary_unsupported">Unsupported kernel version: %s &lt; 3.7.1</string>
  <string name="udp_dns">UDP Forwarding</string>
  <string name="udp_dns_summary">Forward UDP packets to remote</string>
  <string name="dns">DNS</string>
  <string name="dns_summary">The DNS server you want to use to resolve special domain,e.g. 8.8.8.8:53</string>
  <string name="china_dns">China DNS</string>
  <string name="china_dns_summary">The DNS server you want to use to resolve normal domain,e.g. 223.5.5.5:53</string>
  <string name="forward_success">ShadowsocksR started.</string>
  <string name="invalid_server">Invalid server name</string>
  <string name="service_failed">Failed to connect the remote server</string>
  <string name="method_unsafe">WARNING: The current encryption method is unsafe</string>
  <string name="nat_deprecated">WARNING: NAT mode has been deprecated since Android 5.0</string>
  <string name="nat_no_root">NAT mode requires ROOT permission</string>
  <string name="switch_to_vpn">Switch to VPN mode</string>
  <string name="stop">Stop</string>
  <string name="stopping">Shutting down…</string>
  <string name="vpn_error">%s</string>
  <string name="reboot_required">Failed to start VPN service. You might need to reboot your device.</string>
  <string name="quick_switch">Switch</string>
  <string name="service_ssr" translatable="false">SSR Service</string>
  <string name="service_v2ray" translatable="false">V2Ray Service</string>
  <string name="service_trojan" translatable="false">Trojan Service</string>
  <string name="service_nat" translatable="false">Nat Service</string>
  <string name="service_test" translatable="false">Latency Test Service</string>
  <string name="service_test_working">Testing Profiles…</string>
  <string name="view_test_result">View Test Result</string>
  <string name="close">Close</string>
  <string name="proxy_empty">\'Proxy\' and \'Password\' should not be empty</string>
  <string name="connect">Connect</string>
  <string name="initializing">Initializing…</string>
  <string name="recovering">Resetting…</string>
  <string name="loading">Loading…</string>
  <string name="remove_profile">Remove this profile "%s"?</string>
  <string name="dr">No Duplicates</string>
  <string name="open_url">Open</string>
  <string name="profiles">Profiles</string>
  <string name="settings">Settings</string>
  <string name="recovery">Reset</string>
  <string name="recovery_summary">Reset all the background services</string>
  <string name="ignore_battery_optimization">Request ignore battery optimizations</string>
  <string name="ignore_battery_optimization_summary">Click to request trigger Ignore the battery optimization, to avoid background hiccups caused by hibernation when off screen, will increase the battery consumption, may not be triggered properly on some devices.</string>
  <string name="about">About</string>
  <string name="about_title">SSRRAY %s</string>
  <string name="update_v2ray_rules_dat">Update V2Ray Rules Dat File</string>
  <string name="share">Share</string>
  <string name="share_message">Scan QR code or use Android Beam (NFC)</string>
  <string name="share_message_without_nfc">Scan QR code</string>
  <string name="share_message_nfc_disabled">Scan QR code\nAndroid Beam is disabled</string>
  <string name="turn_on_nfc">Turn on NFC &amp; Android Beam</string>
  <string name="flush_dnscache">Flush DNS cache</string>
  <string name="add_profile">Add Profile</string>
  <string name="action_export">Export to Clipboard</string>
  <string name="action_import">Import from Clipboard</string>
  <string name="action_export_more">Export…</string>
  <string name="action_export_file">Export to File</string>
  <string name="action_import_file">Import from File</string>
  <string name="action_import_qrcode_image">Import from QRCode Image</string>
  <string name="action_add_v2ray_config">Import from V2Ray Config</string>
  <string name="action_save_v2ray_config">Save</string>
  <string name="action_clear_v2ray_config">Clear</string>
  <string name="copy">Copy</string>
  <string name="action_full_test">Full Latency Test</string>
  <string name="action_sort">Auto sort by latency</string>
  <string name="batch_delete">Batch Delete</string>
  <string name="frontproxy_set">FrontProxy</string>
  <string name="group_name">Group Name</string>
  <string name="proxy_click">Click to view and edit server address</string>
  <string name="preferenceScreen" translatable="false">preferenceScreen</string>
  <string name="v2rayJSONPreferenceGroup" translatable="false">v2rayJSONPreferenceGroup</string>
  <string name="vmessPreferenceGroup" translatable="false">vmessPreferenceGroup</string>
  <string name="ssrPreferenceGroup" translatable="false">ssrPreferenceGroup</string>
  <string name="featurePreferenceGroup" translatable="false">featurePreferenceGroup</string>
  <string name="miscPreferenceGroup" translatable="false">miscPreferenceGroup</string>
  <string name="test_latency">Test Latency</string>
  <string name="test_download">Test Download</string>
  <string name="test_both">Test Both</string>
  <string name="v_pref_id">ID</string>
  <string name="v_pref_alterid">AlterID</string>
  <string name="v_pref_security">Security</string>
  <string name="v_pref_path">Path</string>
  <string name="v_pref_host">Host</string>
  <string name="v_pref_headertypes">Header Type</string>
  <string name="v_pref_networks">Network</string>
  <string name="title_pref_sort_method">Sort Profiles By</string>
  <string name="title_group_sort_method">Sort Groups By</string>
  <string name="sort_by_default">By Default</string>
  <string name="sort_by_elapsed">By Elapsed</string>
  <string name="sort_by_download">By Download</string>
  <string name="sort_by_normal">Normal</string>
  <string name="sort_by_reverse">Reverse</string>
  <string name="title_pref_hide_server">Hide Server</string>
  <string name="summary_pref_hide_server">Hide Server Addresses for Privacy</string>
</resources>