<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
                  xmlns:app="http://schemas.android.com/apk/res/com.xxf098.ssrray"
    android:key="@string/preferenceScreen">

    <PreferenceCategory
            android:title="@string/proxy_cat"
        android:key="@string/ssrPreferenceGroup">

        <com.github.shadowsocks.preferences.SummaryEditTextPreference
            android:key="groupName"
            android:persistent="false"
            android:title="@string/group_name" />
        <com.github.shadowsocks.preferences.SummaryEditTextPreference
            android:key="profileName"
            android:persistent="false"
            android:title="@string/profile_name" />
        <Preference
            android:key="proxy"
            android:persistent="false"
            android:summary="@string/proxy_click"
            android:title="@string/proxy" />
        <com.github.shadowsocks.preferences.NumberPickerPreference
            android:key="remotePortNum"
            android:persistent="false"
            android:summary="@string/remote_port_summary"
            android:title="@string/remote_port"
            app:max="65535"
            app:min="1" />
        <com.github.shadowsocks.preferences.NumberPickerPreference
            android:key="localPortNum"
            android:persistent="false"
            android:summary="@string/port_summary"
            android:title="@string/port"
            app:max="65535"
            app:min="1025" />
        <com.github.shadowsocks.preferences.PasswordEditTextPreference
            android:inputType="textPassword"
            android:key="sitekey"
            android:persistent="false"
            android:summary="@string/sitekey_summary"
            android:title="@string/sitekey" />
        <com.github.shadowsocks.preferences.DropDownPreference
            android:entries="@array/enc_method_entry"
            android:entryValues="@array/enc_method_value"
            android:key="encMethod"
            android:persistent="false"
            android:summary="%s"
            android:title="@string/enc_method" />
        <com.github.shadowsocks.preferences.DropDownPreference
            android:entries="@array/protocol_entry"
            android:entryValues="@array/protocol_value"
            android:key="protocol"
            android:persistent="false"
            android:summary="%s"
            android:title="@string/protocol" />
        <com.github.shadowsocks.preferences.SummaryEditTextPreference
            android:key="protocol_param"
            android:summary="@string/protocol_param_summary"
            android:title="@string/protocol_param" />
        <com.github.shadowsocks.preferences.DropDownPreference
            android:entries="@array/obfs_entry"
            android:entryValues="@array/obfs_value"
            android:key="obfs"
            android:persistent="false"
            android:summary="%s"
            android:title="@string/obfs" />
        <com.github.shadowsocks.preferences.SummaryEditTextPreference
            android:key="obfs_param"
            android:summary="@string/obfs_param_summary"
            android:title="@string/obfs_param" />

    </PreferenceCategory>

    <PreferenceCategory
        android:title="@string/proxy_v2ray"
        android:key="@string/vmessPreferenceGroup">

        <com.github.shadowsocks.preferences.SummaryEditTextPreference
            android:key="groupName"
            android:persistent="false"
            android:title="@string/group_name" />
        <com.github.shadowsocks.preferences.SummaryEditTextPreference
            android:key="v_ps"
            android:persistent="false"
            android:title="@string/profile_name" />
        <Preference
            android:key="v_add"
            android:persistent="false"
            android:summary="@string/proxy_click"
            android:title="@string/proxy" />
        <com.github.shadowsocks.preferences.NumberPickerPreference
            android:key="v_port"
            android:persistent="false"
            android:summary="@string/remote_port_summary"
            android:title="@string/remote_port"
            app:max="65535"
            app:min="1" />
        <Preference
            android:key="v_id"
            android:persistent="false"
            android:summary="Click to see user id"
            android:title="@string/v_pref_id" />
        <com.github.shadowsocks.preferences.NumberPickerPreference
            android:key="v_aid"
            android:persistent="false"
            android:summary="%d"
            android:title="@string/v_pref_alterid"
            app:max="65535"
            app:min="0" />
        <com.github.shadowsocks.preferences.DropDownPreference
            android:entries="@array/v2ray_security_entry"
            android:entryValues="@array/v2ray_security_value"
            android:key="v_security"
            android:persistent="false"
            android:summary="%s"
            android:title="@string/v_pref_security" />
        <com.github.shadowsocks.preferences.DropDownPreference
            android:entries="@array/networks"
            android:entryValues="@array/networks"
            android:key="v_net"
            android:persistent="false"
            android:summary="%s"
            android:title="@string/v_pref_networks" />
        <com.github.shadowsocks.preferences.DropDownPreference
            android:entries="@array/headertypes"
            android:entryValues="@array/headertypes"
            android:key="v_headertypes"
            android:persistent="false"
            android:summary="%s"
            android:title="@string/v_pref_headertypes" />
        <com.github.shadowsocks.preferences.SummaryEditTextPreference
            android:key="v_host"
            android:summary="Host"
            android:title="@string/v_pref_host" />
        <com.github.shadowsocks.preferences.SummaryEditTextPreference
            android:key="v_path"
            android:summary="Path"
            android:title="@string/v_pref_path" />
        <com.github.shadowsocks.preferences.DropDownPreference
            android:entries="@array/streamsecuritys_entry"
            android:entryValues="@array/streamsecuritys_value"
            android:key="v_tls"
            android:persistent="false"
            android:summary="%s"
            android:title="TLS" />
    </PreferenceCategory>

    <PreferenceCategory
        android:title="@string/proxy_v2ray"
        android:key="@string/v2rayJSONPreferenceGroup">

        <com.github.shadowsocks.preferences.SummaryEditTextPreference
            android:key="groupName"
            android:persistent="false"
            android:title="@string/group_name" />
        <com.github.shadowsocks.preferences.SummaryEditTextPreference
            android:key="v_ps"
            android:persistent="false"
            android:title="@string/profile_name" />
        <Preference
            android:key="v_add_json"
            android:persistent="false"
            android:summary="@string/proxy_click"
            android:title="@string/proxy" />
        <Preference
            android:key="v_id_json"
            android:persistent="false"
            android:summary="Click to see user id"
            android:title="@string/v_pref_id" />

        <Preference
            android:key="v_aid_json"
            android:persistent="false"
            android:title="@string/v_pref_alterid" />

        <Preference
            android:key="v_security_json"
            android:persistent="false"
            android:title="@string/v_pref_security" />

    </PreferenceCategory>

    <PreferenceCategory
            android:title="@string/feature_cat"
        android:key="@string/featurePreferenceGroup">

        <com.github.shadowsocks.preferences.DropDownPreference
                android:key="route"
                android:persistent="false"
                android:entries="@array/route_entry"
                android:entryValues="@array/route_value"
                android:summary="%s"
                android:title="@string/route_list"/>
        <SwitchPreference
                android:key="isIpv6"
                android:persistent="false"
                android:summary="@string/ipv6_summary"
                android:title="@string/ipv6"/>

        <SwitchPreference
                android:key="isUdpDns"
                android:persistent="false"
                android:summary="@string/udp_dns_summary"
                android:title="@string/udp_dns"/>
        <com.github.shadowsocks.preferences.SummaryEditTextPreference
                        android:key="china_dns"
                        android:persistent="false"
                        android:summary="@string/china_dns_summary"
                        android:title="@string/china_dns"/>
        <com.github.shadowsocks.preferences.SummaryEditTextPreference
                android:key="dns"
                android:persistent="false"
                android:summary="@string/dns_summary"
                android:title="@string/dns"/>
    </PreferenceCategory>

    <PreferenceCategory android:title="@string/misc_cat"
        android:key="@string/miscPreferenceGroup">

        <SwitchPreference
                android:key="isAutoConnect"
                android:persistent="false"
                android:summary="@string/auto_connect_summary"
                android:title="@string/auto_connect"/>

        <SwitchPreference
            android:key="isProxyApps"
            android:persistent="false"
            android:summary="@string/proxied_apps_summary"
            android:title="@string/proxied_apps"/>

        <SwitchPreference
                android:key="tcp_fastopen"
                android:defaultValue="false"
                android:summary="@string/tcp_fastopen_summary"
                android:title="TCP Fast Open"/>

        <SwitchPreference android:key="isNAT"
                          android:defaultValue="false"
                          android:title="@string/nat"
                          android:summary="@string/nat_summary"/>
        <Preference android:key="recovery" android:title="@string/recovery"
            android:summary="@string/recovery_summary"/>
<!--        <Preference android:key="ignore_battery_optimization" android:title="@string/ignore_battery_optimization"-->
<!--            android:summary="@string/ignore_battery_optimization_summary"/>-->
        <Preference android:key="aclupdate" android:title="@string/aclupdate"
            android:summary="@string/aclupdate_summary"/>
        <Preference android:key="frontproxy" android:title="@string/frontproxy_set"/>
<!--        <Preference android:key="about" android:title="@string/about"/>-->

<!--        <Preference android:key="logcat" android:title="Logcat"/>-->

    </PreferenceCategory>


</PreferenceScreen>
