<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:alphabeticShortcut="f"
        android:icon="@drawable/ic_click_white"
        android:title="@string/action_full_test"
        app:showAsAction="always">
        <menu>
            <item
                android:id="@+id/action_full_test"
                android:title="@string/test_latency"/>
            <item
                android:id="@+id/action_speed_test"
                android:title="@string/test_download"/>
            <item
                android:id="@+id/action_both_test"
                android:title="@string/test_both"/>
        </menu>
    </item>
    <item android:id="@+id/action_sort"
          android:title="@string/action_sort"
          android:alphabeticShortcut="s"
          android:numericShortcut="2"
          android:icon="@drawable/ic_down"
          android:visible="false"
          app:showAsAction="never"/>
    <item
        android:alphabeticShortcut="s"
        android:icon="@drawable/ic_action_note_add"
        android:title="@string/add_profile"
        app:showAsAction="always">
        <menu>
            <item
                android:id="@+id/action_import_clipboard"
                android:alphabeticShortcut="c"
                android:numericShortcut="4"
                android:title="@string/action_import"/>
            <item
                android:id="@+id/action_import_file"
                android:title="@string/action_import_file"
                android:alphabeticShortcut="i"
                android:numericShortcut="6"/>
<!--            <item-->
<!--                android:id="@+id/action_import_manually_vmess"-->
<!--                android:title="@string/action_import_manually_vmess"-->
<!--                android:numericShortcut="7"/>-->
            <item
                android:id="@+id/action_import_qrcode_image"
                android:title="@string/action_import_qrcode_image"
                android:numericShortcut="8"/>
            <item
                android:id="@+id/action_add_v2ray_config"
                android:title="@string/action_add_v2ray_config"
                android:numericShortcut="9"/>
        </menu>
    </item>
    <item
        android:alphabeticShortcut="s"
        android:icon="@drawable/ic_file_upload"
        android:title="@string/action_export_more"
        app:showAsAction="ifRoom">
        <menu>
            <item
                android:id="@+id/action_export"
                android:alphabeticShortcut="e"
                android:numericShortcut="3"
                android:title="@string/action_export"/>
            <item
                android:id="@+id/action_export_file"
                android:title="@string/action_export_file"
                android:alphabeticShortcut="o"
                android:numericShortcut="5"/>
        </menu>
    </item>
    <item android:title="@string/title_pref_sort_method">
        <menu>
            <group android:checkableBehavior="single">
                <item
                    android:id="@+id/action_sort_by_default"
                    android:title="@string/sort_by_default"
                    android:checked="true" />
                <item
                    android:id="@+id/action_sort_by_latency"
                    android:title="@string/sort_by_elapsed" />
                <item
                    android:id="@+id/action_sort_by_download"
                    android:title="@string/sort_by_download" />
            </group>
        </menu>
    </item>
    <item android:title="@string/title_group_sort_method">
        <menu>
            <group android:checkableBehavior="single">
                <item
                    android:id="@+id/action_sort_group_by_default"
                    android:title="@string/sort_by_normal"
                    android:checked="true" />
                <item
                    android:id="@+id/action_sort_group_by_reverse"
                    android:title="@string/sort_by_reverse" />
            </group>
        </menu>
    </item>
    <item android:id="@+id/action_batch_delete"
        android:title="@string/batch_delete"
        android:alphabeticShortcut="g"
        app:showAsAction="never"/>
    <item android:id="@+id/action_settings"
        android:title="@string/settings"
        app:showAsAction="never"/>
</menu>
