<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
                  xmlns:app="http://schemas.android.com/apk/res/com.xxf098.ssrray"
    android:key="@string/preferenceScreen">

    <PreferenceCategory
            android:title="@string/proxy_cat"
        android:key="@string/ssrPreferenceGroup">

        <com.github.shadowsocks.preferences.SummaryEditTextPreference
            android:key="groupName"
            android:persistent="false"
            android:title="@string/group_name" />
        <com.github.shadowsocks.preferences.SummaryEditTextPreference
            android:key="profileName"
            android:persistent="false"
            android:title="@string/profile_name" />
        <Preference
            android:key="proxy"
            android:persistent="false"
            android:summary="@string/proxy_click"
            android:title="@string/proxy" />
        <com.github.shadowsocks.preferences.NumberPickerPreference
            android:key="remotePortNum"
            android:persistent="false"
            android:summary="@string/remote_port_summary"
            android:title="@string/remote_port"
            app:max="65535"
            app:min="1" />
        <com.github.shadowsocks.preferences.NumberPickerPreference
            android:key="localPortNum"
            android:persistent="false"
            android:summary="@string/port_summary"
            android:title="@string/port"
            app:max="65535"
            app:min="1025" />
        <com.github.shadowsocks.preferences.PasswordEditTextPreference
            android:inputType="textPassword"
            android:key="sitekey"
            android:persistent="false"
            android:summary="@string/sitekey_summary"
            android:title="@string/sitekey" />
        <com.github.shadowsocks.preferences.DropDownPreference
            android:entries="@array/enc_method_entry"
            android:entryValues="@array/enc_method_value"
            android:key="encMethod"
            android:persistent="false"
            android:summary="%s"
            android:title="@string/enc_method" />
        <com.github.shadowsocks.preferences.DropDownPreference
            android:entries="@array/protocol_entry"
            android:entryValues="@array/protocol_value"
            android:key="protocol"
            android:persistent="false"
            android:summary="%s"
            android:title="@string/protocol" />
        <com.github.shadowsocks.preferences.SummaryEditTextPreference
            android:key="protocol_param"
            android:summary="@string/protocol_param_summary"
            android:title="@string/protocol_param" />
        <com.github.shadowsocks.preferences.DropDownPreference
            android:entries="@array/obfs_entry"
            android:entryValues="@array/obfs_value"
            android:key="obfs"
            android:persistent="false"
            android:summary="%s"
            android:title="@string/obfs" />
        <com.github.shadowsocks.preferences.SummaryEditTextPreference
            android:key="obfs_param"
            android:summary="@string/obfs_param_summary"
            android:title="@string/obfs_param" />

    </PreferenceCategory>

    <PreferenceCategory
        android:title="@string/proxy_v2ray"
        android:key="@string/vmessPreferenceGroup">

        <com.github.shadowsocks.preferences.SummaryEditTextPreference
            android:key="groupName"
            android:persistent="false"
            android:title="@string/group_name" />
        <com.github.shadowsocks.preferences.SummaryEditTextPreference
            android:key="v_ps"
            android:persistent="false"
            android:title="@string/profile_name" />
        <Preference
            android:key="v_add"
            android:persistent="false"
            android:summary="@string/proxy_click"
            android:title="@string/proxy" />
        <com.github.shadowsocks.preferences.NumberPickerPreference
            android:key="v_port"
            android:persistent="false"
            android:summary="@string/remote_port_summary"
            android:title="@string/remote_port"
            app:max="65535"
            app:min="1" />
        <Preference
            android:key="v_id"
            android:persistent="false"
            android:summary="Click to see user id"
            android:title="@string/v_pref_id" />
        <com.github.shadowsocks.preferences.NumberPickerPreference
            android:key="v_aid"
            android:persistent="false"
            android:summary="%d"
            android:title="@string/v_pref_alterid"
            app:max="65535"
            app:min="0" />
        <com.github.shadowsocks.preferences.DropDownPreference
            android:entries="@array/v2ray_security_entry"
            android:entryValues="@array/v2ray_security_value"
            android:key="v_security"
            android:persistent="false"
            android:summary="%s"
            android:title="@string/v_pref_security" />
        <com.github.shadowsocks.preferences.SummaryEditTextPreference
            android:key="v_host"
            android:summary="Host"
            android:title="@string/v_pref_host" />
        <com.github.shadowsocks.preferences.SummaryEditTextPreference
            android:key="v_path"
            android:summary="Path"
            android:title="@string/v_pref_path" />
        <com.github.shadowsocks.preferences.DropDownPreference
            android:entries="@array/streamsecuritys_entry"
            android:entryValues="@array/streamsecuritys_value"
            android:key="v_tls"
            android:persistent="false"
            android:summary="%s"
            android:title="TLS" />
    </PreferenceCategory>

</PreferenceScreen>
