<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
                  xmlns:app="http://schemas.android.com/apk/res/com.xxf098.ssrray"
    android:key="@string/preferenceScreen">


    <PreferenceCategory
            android:title="@string/feature_cat"
        android:key="@string/featurePreferenceGroup">

        <com.github.shadowsocks.preferences.DropDownPreference
            android:defaultValue="Default"
            android:entries="@array/sort_method_entry"
            android:entryValues="@array/sort_method_value"
            android:key="pref_sort_method"
            android:summary="%s"
            android:title="@string/title_pref_sort_method" />

        <CheckBoxPreference
            android:key="pref_hide_server"
            android:summary="@string/summary_pref_hide_server"
            android:title="@string/title_pref_hide_server" />

    </PreferenceCategory>


</PreferenceScreen>
