<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item android:id="@+id/action_save_v2ray_config"
        android:title="@string/action_save_v2ray_config"
        android:alphabeticShortcut="s"
        android:numericShortcut="1"
        android:icon="@drawable/ic_action_done"
        app:showAsAction="always"/>

    <item android:id="@+id/action_copy_v2ray_config"
        android:title="@string/copy"
        android:alphabeticShortcut="c"
        android:numericShortcut="1"
        app:showAsAction="never"/>

    <item android:id="@+id/action_clear_v2ray_config"
        android:title="@string/action_clear_v2ray_config"
        android:alphabeticShortcut="s"
        android:numericShortcut="2"
        app:showAsAction="never"/>

</menu>